Fix main sidebar z-index

--- a/src/assets/style/less/g3w-sidebar.less
+++ b/src/assets/style/less/g3w-sidebar.less
@@ -18,7 +18,7 @@
   &.mobile {
     width: @sidebar-width-small;
   }
-  //z-index: 1 !important;
+  z-index: 1 !important;
 }
 
 #g3w-sidebar.sidebar {
